Fix #5479: Hovering over a voter name under BURs wraps the rest of the voter names
For some reason Chrome needs the tooltip to be `display: inline-block`, probably because it was a
block element inside an inline container.

--- a/app/javascript/src/styles/specific/common_tooltips.scss
+++ b/app/javascript/src/styles/specific/common_tooltips.scss
@@ -1,3 +1,7 @@
+div[data-tippy-root] {
+  display: inline-block;
+}
+
 div[data-tippy-root].tooltip-loading {
   visibility: hidden !important;
 }
